Adding one-liner-joke

--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
   "bugs": {
     "url": "https://github.com/mitthrawnuruodo/joker/issues"
   },
-  "homepage": "https://github.com/mitthrawnuruodo/joker#readme"
+  "homepage": "https://github.com/mitthrawnuruodo/joker#readme",
+  "dependencies": {
+    "one-liner-joke": "^1.2.2"
+  }
 }
