--- a/package.json
+++ b/package.json
@@ -23,10 +23,10 @@
     "url": "https://github.com/mitthrawnuruodo/joker/issues"
   },
   "homepage": "https://github.com/mitthrawnuruodo/joker#readme",
-  "dependencies": {
-    "one-liner-joke": "^1.2.2"
-  },
   "devDependencies": {
     "prettier": "^2.7.1"
+  },
+  "dependencies": {
+    "give-me-a-joke": "^0.5.0"
   }
 }
