--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "joker",
+  "name": "test-joker-xiaolasse",
   "version": "0.1.0",
   "description": "Just joking",
   "type": "module",
